--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
+    "uuidv4": "^6.2.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
