--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,7 +47,9 @@
           "tsx": "never"
         }
      ],
-     "prettier/prettier": "error"
+     "prettier/prettier": "error",
+     "react/prop-types": 0,
+     "import/prefer-default-export": "off"
     },
     "settings": {
       "import/resolver": {
