Inserted the skills page with 3d cards

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/leaflet": "^1.5.23",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -18,8 +19,10 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
+    "experiment-parallax-depth-card": "^1.0.0",
     "immer": "^8.0.1",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "lottie-react-web": "^2.2.2",
     "polished": "^4.1.1",
     "react": "^17.0.1",
@@ -32,6 +35,7 @@
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
