--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.6",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
