Experiments page finished

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,9 +29,9 @@
       "react/jsx-filename-extension": [
         1,
         {
-        "extensions": [
-          ".tsx"
-        ]
+          "extensions": [
+            ".tsx"
+          ]
         }
       ],
       "no-use-before-define": "off",
@@ -47,7 +47,12 @@
           "tsx": "never"
         }
      ],
-     "prettier/prettier": "error",
+     "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+     ],
      "react/prop-types": 0,
      "import/prefer-default-export": "off",
      "react/jsx-props-no-spreading": "off",
